fix overflow

--- a/src/styles/filterByname.css
+++ b/src/styles/filterByname.css
@@ -26,7 +26,7 @@
         padding: 0rem;
         padding-bottom: 1rem;
         padding-top: 1rem;
-        width: 40rem;
+        width: 15rem;
         margin-left: auto;
         margin-right: auto;
     }
@@ -34,7 +34,7 @@
     .planetName label {
         display: flex;
         flex-direction: column;
-        font-size: 15px;
+        font-size: 10px;
         
     }
     
@@ -46,7 +46,7 @@
         padding: 0rem;
         padding-bottom: 1rem;
         padding-top: 1rem;
-        width: 25rem;
+        width: 15rem;
         margin-left: auto;
         margin-right: auto;
     }
