--- a/src/styles/ordenedFilter.css
+++ b/src/styles/ordenedFilter.css
@@ -66,7 +66,9 @@
 }
 
 
-
+header {
+    overflow-x: hidden;
+}
 
 
 @media (max-width: 700px) { 
@@ -82,7 +84,7 @@
 
     .sortedForm {
         height: 8rem;
-        width: 25rem;
+        width: 15rem;
         display: flex;
         flex-direction: column;
         align-items: center;
